--- a/Project/Frontend/resume/resume.html
+++ b/Project/Frontend/resume/resume.html
@@ -85,10 +85,17 @@
                 </div>
             </div>
         </div>
-
-        <div class="contaniner text-center mt-3">
-            <button class="btn btn-primary btn-lg">Generate CV</button>
-        </div>
+        <div class="bot">
+            <a href="../mainpage/mainpage.html">
+                <button type="goBack" class="buttonBack">Go back</button>
+            </a>
+            <a href="#">
+                <button type="generate" class="buttonGenerate">Generate CV</button>
+            </a>
+            <a href="#">
+                <button type="next" class="buttonNext">Next</button>
+            </a>
+        </div> 
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
