--- a/Project/Frontend/signin/signin.html
+++ b/Project/Frontend/signin/signin.html
@@ -20,7 +20,7 @@
         <input type="email" id="email" class="signin-input" placeholder="Eg: yuh.nguyenpham@gmail.com">
         <label for="password" class="signin-label">Password</label>
         <input type="password" id="password" class="signin-input" placeholder=".......................................................">
-        <button class="signin-submit">Sign in</button>
+        <a style="text-decoration: none" href="../mainpage/mainpage.html" class="signin-submit">Sign in</a>
         <p class="signin-already">
             <span>Still not have an account ?</span>
             <a href="../signup/signup.html" class="signup-login-link">Sign up</a>
