--- a/Project/Frontend/resume/resume.html
+++ b/Project/Frontend/resume/resume.html
@@ -41,7 +41,7 @@
                     <textarea id="addressField" class="form-control" placeholder="E.g: Thanh Pho Vung Tau" rows="5"></textarea>
                 </div>
 
-                <p class="text-secondary my-3">Contact links:</p>
+                <h3 class="text-secondary">Contact links:</h3>
 
                 <div class="form-group mt-2">
                     <label for="facebookField">Facebook link:</label>
