--- a/Project/Frontend/resume/resume.html
+++ b/Project/Frontend/resume/resume.html
@@ -9,7 +9,7 @@
     <title>Resume Builder</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="cv-form">
         <h1 class="text-center my-2">Resume Generator</h1>
         <p class="text-center">By Group 12</p>
 
@@ -22,18 +22,24 @@
                 </div>
 
                 <div class="form-group mt-2">
-                    <label for="emailField">Your email:</label>
-                    <input type="text" id="emailField" class="form-control" placeholder="E.g: yuh.nguyenpham@gmail.com">
+                    <label for="genderField">Your gender:</label>
+                    <input type="text" id="genderField" class="form-control" placeholder="E.g: Male">
                 </div>
 
                 <div class="form-group mt-2">
-                    <label for="ageField">Your age:</label>
-                    <input type="number" id="ageField" class="form-control" placeholder="E.g: 18">
+                    <label for="birthDayField">Your birthday:</label>
+                    <input type="date" id="birthDayField" class="form-control">
                 </div>
 
                 <div class="form-group mt-2">
                     <label for="contactField">Your contact numbers:</label>
                     <input type="tel" id="contactField" class="form-control" placeholder="E.g: 0969122412">
+                </div>
+
+
+                <div class="form-group mt-2">
+                    <label for="emailField">Your email:</label>
+                    <input type="text" id="emailField" class="form-control" placeholder="E.g: yuh.nguyenpham@gmail.com">
                 </div>
 
                 <div class="form-group mt-2">
@@ -63,7 +69,7 @@
 
                 <div class="form-group mt-2">
                     <label for="">Objective:</label>
-                    <textarea class="form-control" placeholder="Provides a 2-3 sentence snapshot of your professional experience, skills, and achievements,..." rows="4"></textarea>
+                    <textarea class="form-control" id="objectiveField" placeholder="Provides a 2-3 sentence snapshot of your professional experience, skills, and achievements,..." rows="4"></textarea>
                 </div>
 
                 <div class="form-group mt-2" id="aq">
@@ -90,12 +96,82 @@
                 <button type="goBack" class="buttonBack">Go back</button>
             </a>
             <a href="#">
-                <button type="generate" class="buttonGenerate">Generate CV</button>
-            </a>
-            <a href="#">
-                <button type="next" class="buttonNext">Next</button>
+                <button onclick="generateCV()" type="generate" class="buttonGenerate">Generate CV</button>
             </a>
         </div> 
+    </div>
+
+    <div class="container backgroundForm" id="cv-template">
+        <div class="row">
+            <div class="col-md-4 text-center py-5 background">
+                <img src="../img/default-avatar.jpeg" alt="" class="img-fluid thumb-img">
+                <div class="container">
+                    <p class="nameT" id="nameT">Nguyễn Phạm Gia Huy</p>
+                    <div class="card-header">
+                        <h3 class="contact-info">Contact Info</h3>
+                        <p class="personal-info" id="birthDayT">24/12/2001</p>
+                        <p class="personal-info" id="genderT">Male</p>
+                        <p class="personal-info" id="contactT">0969122412</p>
+                        <p class="personal-info" id="emailT">yuh.nguyenpham@gmail.com</p>
+                        <p class="personal-info" id="addressT">Thanh Pho Vung Tau</p>
+                    </div>
+
+
+                    <hr>
+                    <div class="card-header">
+                        <h3 class="contact-info">Contact Links</h3>
+                        <p><a id="facebookT" href="https://facebook.com/HinhNhuLaHuy" class="link">Facebook: https://facebook.com/HinhNhuLaHuy</a></p>
+                        <p><a id="instagramT" href="https://facebook.com/HinhNhuLaHuy" class="link">Instagram: https://facebook.com/HinhNhuLaHuy</a></p>
+                        <p><a id="githubT" href="https://github.com/HinhNhuLaHuy" class="link">Github: https://github.com/HinhNhuLaHuy</a></p>    
+                    </div>
+                 </div>
+            </div>
+            <div class="col-md-8 py-5">
+                <div class="card mt-4">
+                    <div class="card-header bg-info text-white">
+                        <h3>Objective</h3>
+                    </div>
+                    <div class="card-body">
+                        <p id="objectiveT">text</p>
+                    </div>
+                </div>
+
+                <div class="card mt-4">
+                    <div class="card-header bg-info text-white">
+                        <h3>Academic Qualification</h3>
+                    </div>
+                    <div class="card-body">
+                        <ul id="aqT">
+                            <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati, tempore!</li>
+                            <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati, tempore!</li>
+                            <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati, tempore!</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="card mt-4">
+                    <div class="card-header bg-info text-white">
+                        <h3>Work Experience</h3>
+                    </div>
+                    <div class="card-body">
+                        <ul id="weT">
+                            <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati, tempore!</li>
+                            <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati, tempore!</li>
+                            <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati, tempore!</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="container mt-3 text-center">
+                    <a class="btn bg-info text-white" href="../resume/resume.html">
+                        Go back
+                     </a>
+                    <button onclick="printCV()" class="btn bg-info text-white">
+                        Print CV
+                    </button>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
