add some feature

--- a/Project/Frontend/mainpage/mainpage.html
+++ b/Project/Frontend/mainpage/mainpage.html
@@ -26,7 +26,7 @@
         <div class="media-icons">
             <a href="https://www.facebook.com/HinhNhuLaHuy"><i class="fab fa-facebook-f"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="https://github.com/HinhNhuLaHuy"><i class="fab fa-github"></i></a>
         </div>
     </section>
 </body>
