--- a/Project/Frontend/resume/resume.html
+++ b/Project/Frontend/resume/resume.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="resume.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+    <script src="https://kit.fontawesome.com/d8ded057c6.js" crossorigin="anonymous"></script>
     <title>Resume Builder</title>
 </head>
 <body>
@@ -51,16 +53,19 @@
 
                 <div class="form-group mt-2">
                     <label for="facebookField">Facebook link:</label>
+                    <i class="fab fa-facebook-f"></i>
                     <input type="text" id="facebookField" class="form-control" placeholder="E.g: https://www.facebook.com/HinhNhuLaHuy">
                 </div>
 
                 <div class="form-group mt-2">
                     <label for="instagramField">Instagram link:</label>
+                    <i class="fab fa-instagram"></i>
                     <input type="text" id="instagramField" class="form-control" placeholder="E.g: https://www.instagram.com/HinhNhuLaHuy">
                 </div>
 
                 <div class="form-group mt-2">
                     <label for="githubField">Github link:</label>
+                    <i class="fab fa-github"></i>
                     <input type="text" id="githubField" class="form-control" placeholder="E.g: https://www.github.com/HinhNhuLaHuy">
                 </div>
             </div>
@@ -93,7 +98,10 @@
         </div>
         <div class="bot">
             <a href="../mainpage/mainpage.html">
-                <button type="goBack" class="buttonBack">Go back</button>
+                <button type="goBack" class="buttonBack">
+                    <i class="fa-solid fa-arrow-left"></i>
+                    Go back
+                </button>
             </a>
             <a href="#">
                 <button onclick="generateCV()" type="generate" class="buttonGenerate">Generate CV</button>
@@ -120,9 +128,9 @@
                     <hr>
                     <div class="card-header">
                         <h3 class="contact-info">Contact Links</h3>
-                        <p><a id="facebookT" href="https://facebook.com/HinhNhuLaHuy" class="link">Facebook: https://facebook.com/HinhNhuLaHuy</a></p>
-                        <p><a id="instagramT" href="https://facebook.com/HinhNhuLaHuy" class="link">Instagram: https://facebook.com/HinhNhuLaHuy</a></p>
-                        <p><a id="githubT" href="https://github.com/HinhNhuLaHuy" class="link">Github: https://github.com/HinhNhuLaHuy</a></p>    
+                        <p><i class="fab fa-facebook-f"></i><a id="facebookT" href="https://facebook.com/HinhNhuLaHuy" class="link">Facebook: https://facebook.com/HinhNhuLaHuy</a></p>
+                        <p><i class="fab fa-instagram"></i><a id="instagramT" href="https://facebook.com/HinhNhuLaHuy" class="link">Instagram: https://facebook.com/HinhNhuLaHuy</a></p>
+                        <p><i class="fab fa-github"></i><a id="githubT" href="https://github.com/HinhNhuLaHuy" class="link">Github: https://github.com/HinhNhuLaHuy</a></p>    
                     </div>
                  </div>
             </div>
