--- a/Project/Frontend/signin/signin.html
+++ b/Project/Frontend/signin/signin.html
@@ -15,12 +15,12 @@
         <button class="signin-social" onclick="location.href='../resume/resume.html'"">
             <span class="signin-social-text">Create your CV right now</span>
         </button>
-        <div class="signin-or"><span>Or</span></div>
-        <label for="email" class="signin-label">Email</label>
-        <input type="email" id="email" class="signin-input" placeholder="Eg: yuh.nguyenpham@gmail.com">
-        <label for="password" class="signin-label">Password</label>
-        <input type="password" id="password" class="signin-input" placeholder=".......................................................">
-        <a style="text-decoration: none" href="../mainpage/mainpage.html" class="signin-submit">Sign in</a>
+            <div class="signin-or"><span>Or</span></div>
+            <label for="email" class="signin-label">Email</label>
+            <input type="email" id="email" class="signin-input" name="email" placeholder="Eg: yuh.nguyenpham@gmail.com">
+            <label for="password" class="signin-label">Password</label>
+            <input type="password" id="password" class="signin-input" name="password" placeholder=".......................................................">    
+          <a style="text-decoration: none" href="../mainpage/mainpage.html" class="signin-submit">Sign in</a>
         <p class="signin-already">
             <span>Still not have an account ?</span>
             <a href="../signup/signup.html" class="signup-login-link">Sign up</a>
