--- a/Project/Frontend/signup/signup.html
+++ b/Project/Frontend/signup/signup.html
@@ -15,14 +15,14 @@
         <button class="signup-social" onclick="location.href='../resume/resume.html'">
             <span class="signup-social-text">Create your CV right now</span>
         </button>
-        <div class="signup-or"><span>Or</span></div>
-        <label for="fullname" class="signup-label">Full name</label>
-        <input type="text" id="fullname" class="signup-input" placeholder="Eg: Huy Nguyen">
-        <label for="email" class="signup-label">Email</label>
-        <input type="email" id="email" class="signup-input" placeholder="Eg: yuh.nguyenpham@gmail.com">
-        <label for="password" class="signup-label">Password</label>
-        <input type="password" id="password" class="signup-input" placeholder=".......................................................">
-        <button class="signup-submit">Sign up</button>
+            <div class="signup-or"><span>Or</span></div>
+            <label for="fullname" class="signup-label">Full name</label>
+            <input type="text" id="fullname" class="signup-input" name="fullName" placeholder="Eg: Huy Nguyen">
+            <label for="email" class="signup-label">Email</label>
+            <input type="email" id="email" class="signup-input" name="email" placeholder="Eg: yuh.nguyenpham@gmail.com">
+            <label for="password" class="signup-label">Password</label>
+            <input type="password" id="password" class="signup-input" name="password" placeholder=".......................................................">
+            <button type="submit" class="signup-submit">Sign up</button>
         <p class="signup-already">
             <span>Already have an account ?</span>
             <a href="../signin/signin.html" class="signup-login-link">Login</a>
